[package]
name = "pmppt"
version = "0.1.0"
edition = "2024"

[dependencies]
brace-expand = "0.1"
chrono = "0.4"
env_logger = "0.11"
glob = "0.3"
log = "0.4"
plotly = { version = "0.13", features = ["plotly_embed_js"] }
rmp-serde = "1.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yml = "0.0"
subprocess = "0.2"
tempdir = "0.3"